--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,6 @@
 @import './header';
 @import './library-header';
 @import './my-library-films-cards-set';
-@import "./one-film-card";
+@import './one-film-card';
 @import './backdrop';
 @import './footer';
