--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,7 +4,7 @@
 @import './container';
 @import './header';
 @import './library-header';
-@import './my-library-films-cards-set';
+@import './gallery';
 @import './one-film-card';
 @import './backdrop';
 @import './footer';
