Adding dark mode

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -42,5 +42,19 @@
       </form>
       <p class="header-search__text" role="alert" id="wrongSearch"></p>
     </div>
+
+    <!-- Dark Mode -->
+    <div class="toggle__wrapper">
+			<span id="toggle__icon">
+      
+				<i class="fa-regular fa-sun fa-lg" style="color: #f6ee09;"></i>
+				<label class="toggle__switch">
+					<input type="checkbox" id="toggle__checkbox">
+					<span class="toggle__slider"></span>
+				  </label>
+			</span>
+		</div>
+
+
   </div>
 </header>
