--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,6 +21,13 @@
           <li>
             <a href="library.html" class="header-nav-items__link">My library</a>
           </li>
+          <li>
+            <a href="" class="header-nav-items__link">
+              <svg class="user-icon" width="14" height="14">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
