Fixed gallery and header style

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="section">
-  <div class="container-header">
+<header class="section section-header">
+  <div class="container container-header">
     <div class="header-nav">
       <div class="header-nav__logo">
         <a href="index.html" class="header-logo">
@@ -52,16 +52,13 @@
 
     <!-- Dark Mode -->
     <div class="toggle__wrapper">
-			<span id="toggle__icon">
-      
-				<i class="fa-regular fa-sun fa-lg" style="color: #f6ee09;"></i>
-				<label class="toggle__switch">
-					<input type="checkbox" id="toggle__checkbox">
-					<span class="toggle__slider"></span>
-				  </label>
-			</span>
-		</div>
-
-
+      <span id="toggle__icon">
+        <i class="fa-regular fa-sun fa-lg" style="color: #f6ee09"></i>
+        <label class="toggle__switch">
+          <input type="checkbox" id="toggle__checkbox" />
+          <span class="toggle__slider"></span>
+        </label>
+      </span>
+    </div>
   </div>
 </header>
