--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -53,7 +53,7 @@
     <!-- Dark Mode -->
     <div class="toggle__wrapper">
       <span id="toggle__icon">
-        <i class="fa-regular fa-sun fa-lg" style="color: #f6ee09"></i>
+        <i class="fa-regular fa-sun fa-lg" style="color: #ff6b08"></i>
         <label class="toggle__switch">
           <input type="checkbox" id="toggle__checkbox" />
           <span class="toggle__slider"></span>
