Firebase Auth and Firestore added

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,4 +8,7 @@
 @import './one-film-card';
 @import './backdrop';
 @import './footer';
-@import "./darkmode"
+@import './darkmode';
+@import './signup-modal';
+@import './login-modal';
+
