--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -10,8 +10,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  position: absolute;
-  bottom: 0;
+  background-color: $footer;
 
   @media screen and (min-width: $tablet) {
     padding-block: 30px;
@@ -52,10 +51,10 @@
   display: inline;
 }
 
-.footer__paragraph1{
+.footer__paragraph1 {
   padding-right: 5px;
 }
 
-.footer__paragraph2{
+.footer__paragraph2 {
   padding-left: 5px;
 }
