--- a/src/sass/_darkmode.scss
+++ b/src/sass/_darkmode.scss
@@ -10,6 +10,10 @@ body.dark__theme {
 	background-color: #1a1818;;
 }
 
+body.dark__theme .info-title {
+	color: #fff;
+}
+
 .toggle__switch {
 	position: relative;
 	display: inline-block;
