--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="container">
-  <div class="footer">
+<footer>
+  <div class="footer dark__theme">
     <p>&copy; 2023 | All Rights Reserved |</p>
     <div class="footer__wrapper">
       <p class="footer__paragraph1">Developed with</p>
