Add awesome fonts, user icon, fix drop shadow

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="section section-header">
+<section class="section section-header">
   <div class="container container-header">
     <div class="header-nav">
       <div class="header-nav__logo">
@@ -61,4 +61,4 @@
       </span>
     </div>
   </div>
-</header>
+</section>
