--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -19,6 +19,13 @@
               >my library</a
             >
           </li>
+          <li>
+            <a href="" class="nav__link">
+              <svg class="user-icon" width="14" height="14">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -35,6 +42,16 @@
           </button>
         </li>
       </ul>
+    </div>
+    <!-- Dark Mode -->
+    <div class="toggle__wrapper">
+      <span id="toggle__icon">
+        <i class="fa-regular fa-sun fa-lg" style="color: #ff6b08"></i>
+        <label class="toggle__switch">
+          <input type="checkbox" id="toggle__checkbox" />
+          <span class="toggle__slider"></span>
+        </label>
+      </span>
     </div>
   </div>
 </section>
