--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -9,6 +9,7 @@
   background-size: cover;
 }
 .container--library {
+  position: relative;
   box-sizing: border-box;
   width: 100%;
   padding: 0 20px;
