adding mem for empty library

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,5 +9,6 @@
 @import './backdrop';
 @import './footer';
 @import './loader';
-@import "./darkmode"
+@import "./darkmode";
+@import "./empty-library";
 
