--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,7 +22,7 @@
             <a href="library.html" class="header-nav-items__link">My library</a>
           </li>
           <li>
-            <a href="" class="header-nav-items__link">
+            <a href="" class="header-nav-items__link auth-menu-open-btn">
               <svg class="user-icon" width="14" height="14">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
