--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1063,4 +1063,41 @@ input:checked + .toggle__slider:before {
 body.dark__theme header,
 body.dark__theme footer {
   box-shadow: 0px 1px 58px 12px rgba(255, 85, 0, 0.7), 1px 2px 4px 0px rgba(255, 85, 0, 0.7), 2px 4px 8px 0px rgba(255, 85, 0, 0.7), 2px 4px 16px 0px rgba(255, 85, 0, 0.7);
+}
+
+.empty__library {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.empty__text2 {
+  font-size: 16px;
+  color: lightcoral;
+  font-weight: bold;
+}
+
+.empty__text1 {
+  padding: 10px;
+  font-size: 1.5rem;
+}
+
+img {
+  padding: 0 10px 10px 10px;
+}
+
+@media (min-width: 768px) {
+  .empty__text1 {
+    padding: 10px;
+    font-size: 2rem;
+  }
+  .empty__text2 {
+    font-size: 24px;
+  }
+  img {
+    padding-bottom: 10px;
+    width: 100%;
+    height: 100%;
+  }
 }/*# sourceMappingURL=index.css.map */
