--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -20,7 +20,7 @@
             >
           </li>
           <li>
-            <a href="" class="nav__link">
+            <a href="" class="nav__link auth-menu-open-btn">
               <svg class="user-icon" width="14" height="14">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
