import darkmode.js to index.js

--- a/src/sass/_darkmode.scss
+++ b/src/sass/_darkmode.scss
@@ -10,7 +10,8 @@ body.dark__theme, .footer.dark__theme {
 	background-color: #1a1818;;
 }
 
-body.dark__theme .info-title {
+body.dark__theme .info-title,
+body.dark__theme .empty__text1 {
 	color: #fff;
 }
 
