Fix bouncing buttons and empty library code

--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -93,7 +93,7 @@
   &:hover,
   &:focus {
     background: $orange-button;
-    border: none;
+    border: 1px solid transparent; //if choose 'none' then buttons bounces when hovered
     outline: none;
     box-shadow: (
       0px 4px 4px rgba(0 0 0 / 0.25),
