--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -52,15 +52,12 @@
   font-size: 12px;
   line-height: 1.16;
   text-transform: uppercase;
-  transition: color $transition, scale $transition;
+  transition: color $transition, transform $transition;
   &:hover,
   &:focus {
     outline: none;
     color: $orange-font;
-    scale: 1.05;
-    // &::after {
-    //   background: $orange-font;
-    // }
+    transform: translatey(-1);
   }
 }
 .nav__item {
