Revert "Merge branch 'main' into feature/firebase"
This reverts commit c1b69a636d514a061b084923e6869b5ca0033abd, reversing
changes made to 4425654e687f51232d2abe39f497574d4f2b6bc7.

--- a/src/partials/empty-library.html
+++ b/src/partials/empty-library.html
@@ -1,11 +1,8 @@
 <div class="empty__library">
-  <h2 class="empty__text1">Drogi kinomaniaku</h2>
-  <p class="empty__text2">Twoja biblioteka jest pusta dodaj jakieś filmy</p>
-  <div class="empty__john">
-    <img
-      class="empty__img"
-      src="https://media.tenor.com/FlUqvR77ru8AAAAd/bovisa-politecnico.gif"
-      alt="Johny empty library"
-    />
-  </div>
+<h2 class="empty__text1">Drogi kinomaniaku</h2>
+<p class="empty__text2">Twoja biblioteka jest pusta dodaj jakieś filmy</p>
+<div class="empty__john">
+    <img src="https://media.tenor.com/FlUqvR77ru8AAAAd/bovisa-politecnico.gif" alt="Johny empty library">
+</div>
+
 </div>
