--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -38,6 +38,10 @@
     fill: none;
   }
 }
+.logo__icon {
+  -webkit-animation: pulsing 4s infinite;
+  animation: pulsing 4s infinite;
+}
 .logo__text {
   display: none;
 }
@@ -48,14 +52,12 @@
   font-size: 12px;
   line-height: 1.16;
   text-transform: uppercase;
-  transition: color $transition;
+  transition: color $transition, transform $transition;
   &:hover,
   &:focus {
     outline: none;
     color: $orange-font;
-    // &::after {
-    //   background: $orange-font;
-    // }
+    transform: translatey(-1);
   }
 }
 .nav__item {
@@ -93,7 +95,7 @@
   &:hover,
   &:focus {
     background: $orange-button;
-    border: none;
+    border: 1px solid transparent; //if choose 'none' then buttons bounces when hovered
     outline: none;
     box-shadow: (
       0px 4px 4px rgba(0 0 0 / 0.25),
