--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -2,7 +2,7 @@
     <div class="modal-info">
       <button type="button" class="modal__cross-btn">
         <svg class="modal__cross-btn-icon" width="30" height="30">
-          <use href="./images/icons.svg#icon-close-3"></use>
+          <use href="./images/icons.svg#icon-close"></use>
         </svg>
       </button>
       
