Add video modal

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
       <p class="footer__paragraph1">Developed with</p>
       <i class="fa-sharp fa-solid fa-heart fa-beat" style="color: #ff6b01"></i>
       <p class="footer__paragraph2">by</p>
-      <a class="footer__font">GoIT Students</a>
+      <a href="#" class="footer__font">GoIT Students</a>
     </div>
   </div>
 </footer>
