modal do weryfikacji przez Georga

--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -6,6 +6,8 @@
         </svg>
       </button>
       
-      <div class="movie-info-content"></div>
+      <div class="movie-info-content">
+      
+      </div>
     </div>
   </div>
