--- a/src/sass/_empty-library.scss
+++ b/src/sass/_empty-library.scss
@@ -1,4 +1,5 @@
 .empty__library {
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,17 +8,23 @@
 
 .empty__text2 {
   font-size: 16px;
-  color: lightcoral;
+  color: $orange-font;
   font-weight: bold;
+  padding: 10px;
 }
 
 .empty__text1 {
   padding: 10px;
   font-size: 1.5rem;
 }
-
 .empty__img {
   padding: 0 10px 10px 10px;
+}
+.john-is-hidden {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 @media screen and (min-width: $tablet) {
   .empty__text1 {
