--- a/src/sass/auth-menu.scss
+++ b/src/sass/auth-menu.scss
@@ -15,49 +15,70 @@
   align-content: center;
   padding: 10px;
   padding-bottom: 20px;
-  background-color: #f2a987;
+  background-color: $orange-button;
   transition: transform 300ms;
 
   &__header {
-    font-size: 24px;
+    font-size: 18px;
+    line-height: 1.16;
+    text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 10px;
   }
 
   &__signup-button {
+    color: $black;
     width: 150px;
     height: 30px;
+    box-shadow: 0px 4px 4px rgba(0 0 0 / 0.25);
+    margin-bottom: 10px;
+    background: $white;
     border-radius: 5px;
     border: 0;
-    box-shadow: 5px 10px 15px -5px rgba(0, 0, 0, 1);
-    margin-bottom: 10px;
-    background-color: #4169e1;
-    font-size: 18px;
+    font-size: 12px;
+    line-height: 1.16;
+    text-transform: uppercase;
     cursor: pointer;
-
-    &:hover {
-      background-color: #3d428b;
+    transition: background-color $transition, transform $transition;
+    &:hover,
+    &:focus {
+      transform: translatey(-1);
+      background: $red;
+      border: 1px solid transparent;
+      box-shadow: 0px 4px 4px rgba(0 0 0 / 0.25);
+      outline: none;
     }
   }
 
   &__login-button {
+    color: $white;
     width: 150px;
     height: 30px;
-    border: 0;
-    border-radius: 5px;
-    box-shadow: 5px 10px 15px -5px rgba(0, 0, 0, 1);
+    box-shadow: 0px 4px 4px rgba(0 0 0 / 0.25);
     margin-top: 7px;
-    font-size: 18px;
-    background-color: #4169e1;
+    background: none;
+    border-radius: 5px;
+    border: 1px solid $white;
+    font-size: 12px;
+    line-height: 1.16;
+    text-transform: uppercase;
     cursor: pointer;
+    transition: background-color $transition, transform $transition;
 
-    &:hover {
-      background-color: #3d428b;
+    &:hover,
+    &:focus {
+      transform: translatey(-1);
+      background: $red;
+      border: 1px solid transparent;
+      box-shadow: 0px 4px 4px rgba(0 0 0 / 0.25);
+      outline: none;
     }
   }
 
   &__text {
-    font-size: 18px;
+    font-size: 16px;
+    line-height: 1.16;
+    text-transform: uppercase;
     font-weight: 700;
   }
 }
@@ -73,7 +94,7 @@
   align-items: center;
   align-content: center;
   padding: 10px;
-  background-color: #f2a987;
+  background-color: $orange-button;
 
   &__header-wrapper {
     display: flex;
@@ -85,29 +106,41 @@
   }
 
   &__header {
-    font-size: 24px;
+    font-size: 18px;
+    line-height: 1.16;
     font-weight: 700;
     margin-right: 5px;
+    text-transform: uppercase;
   }
 
   &__user-name {
-    font-size: 24px;
+    font-size: 18px;
+    line-height: 1.16;
     font-weight: 700;
+    text-transform: uppercase;
   }
 
   &__logout-button {
+    color: $black;
     width: 200px;
     height: 50px;
-    border: 0;
-    border-radius: 5px;
-    box-shadow: 5px 10px 15px -5px rgba(0, 0, 0, 1);
+    box-shadow: 0px 4px 4px rgba(0 0 0 / 0.25);
     margin-top: 7px;
+    background: $white;
+    border-radius: 5px;
+    border: 0;
     font-size: 18px;
-    background-color: #4169e1;
+    line-height: 1.16;
+    text-transform: uppercase;
     cursor: pointer;
+    transition: background-color $transition, transform $transition;
 
-    &:hover {
-      background-color: #3d428b;
+    &:hover,
+    &:focus {
+      transform: translatey(-1);
+      background: $red;
+      box-shadow: 0px 4px 4px rgba(0 0 0 / 0.25);
+      outline: none;
     }
   }
 }
@@ -119,14 +152,14 @@
 @media screen and (min-width: $tablet) {
   .menu {
     right: 30px;
-    width: 40%;
+    width: 250px;
   }
 }
 
 @media screen and (min-width: $desktop) {
   .menu {
     right: 30px;
-    width: 20%;
+    width: 250px;
   }
 }
 
