--- a/src/partials/empty-library.html
+++ b/src/partials/empty-library.html
@@ -1,7 +1,6 @@
-<div class="films-cards-set"></div>
 <div class="empty__library empty__hide__john">
-  <h2 class="empty__text1">Drogi kinomaniaku</h2>
-  <p class="empty__text2">Twoja biblioteka jest pusta dodaj jakieś filmy</p>
+  <h2 class="empty__text1">Dear movie buff</h2>
+  <p class="empty__text2">Your library is empty so please add some videos</p>
   <div class="empty__john">
     <img
       class="empty__img"
