--- a/src/partials/empty-library.html
+++ b/src/partials/empty-library.html
@@ -1,4 +1,4 @@
-<div class="empty__library empty__hide__john">
+<div class="empty__library john-is-hidden">
   <h2 class="empty__text1">Dear movie buff</h2>
   <p class="empty__text2">Your library is empty so please add some videos</p>
   <div class="empty__john">
