--- a/src/sass/_backdrop.scss
+++ b/src/sass/_backdrop.scss
@@ -187,7 +187,9 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+  z-index: 999;
 }
+
 
 .movie-info-content {
   color:$black;
