--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -6,51 +6,6 @@
       </svg>
     </button>
     <!-- TUTAJ ZACZYNA SIĘ STRING!!!!! -->
-    <div class="movie-info-content">
-      <img
-        class="movie-detail__image"
-        src="https://image.tmdb.org/t/p/w500//${
-        poster_path
-      }"
-      />
-      <div class="modal__content">
-        <h2 class="modal__title">${original_title}</h2>
-        <ul class="modal__list">
-          <li class="modal__item">
-            <p class="modal__item--label">Vote / Votes</p>
-            <div class="modal__item--vote">
-              <p class="modal__item--value modal__item--value--vote">
-                <p>${vote_average.toFixed(1)}</p>
-                /<p>${vote_count}</p>
-              </p>
-            </div>
-          </li>
-          <li class="modal__item">
-            <p class="modal__item--label">Popularity</p>
-            <p class="modal__item--value">${popularity.toFixed(1)}</p>
-          </li>
-          <li class="modal__item">
-            <p class="modal__item--label">Original Title</p>
-            <p class="modal__item--value big">${original_title}</p>
-          </li>
-          <li class="modal__item">
-            <p class="modal__item--label">Genre</p>
-            <p class="modal__item--value">${genres}</p>
-          </li>
-        </ul>
-        <div class="modal__overview">
-          <h3 class="modal__overview--about">ABOUT</h3>
-          <p class="modal__overview--overview">${overview}</p>
-        </div>
-        <div class="modal__buttons">
-          <button id="watched" class="modal__button modal__button--watched">
-            Add to watched
-          </button>
-          <button id="queue" class="modal__button modal__button--queue">
-            Add to queue
-          </button>
-        </div>
-      </div>
-    </div>
+    <div class="movie-info-content"></div>
   </div>
 </div>
