--- a/src/sass/_backdrop.scss
+++ b/src/sass/_backdrop.scss
@@ -84,12 +84,17 @@ z-index: 1001;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 35px;
+  line-height: 23px;
   margin-bottom: 20px;
   text-transform: uppercase;
 
+@media screen and (min-width: $tablet) {
+  font-size: 30px;
+  line-height: 35px;
+}
 @media screen and (min-width: $desktop) {
   font-size: 30px;
+  line-height: 35px;
 }
 }
 
