--- a/src/sass/_backdrop.scss
+++ b/src/sass/_backdrop.scss
@@ -49,11 +49,9 @@ z-index: 1001;
 }
 }
 
-.modal__content 
-{
+.modal__content {
     width: 240px;
   
-
 @media screen and (min-width: $tablet) {
   width: 264px;
 }
@@ -68,6 +66,7 @@ z-index: 1001;
   height: 357px;
   border-radius: 5px;
   margin-bottom: 20px;
+  object-fit: cover;
 @media screen and (min-width: $tablet) {
   width: 264px;
   height: 374px;
@@ -89,7 +88,7 @@ z-index: 1001;
   text-transform: uppercase;
 
 @media screen and (min-width: $tablet) {
-  font-size: 30px;
+  font-size: 20px;
   line-height: 35px;
 }
 @media screen and (min-width: $desktop) {
@@ -106,16 +105,7 @@ z-index: 1001;
   margin-bottom: 20px;
 }
 
-.modal__item--label {
-  width: 38%;
-  color:$gray;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  padding: 0;
-}
-
-.modal__item--value big {
+.big {
   text-transform: uppercase;
 }
 
@@ -124,6 +114,16 @@ z-index: 1001;
   margin-bottom: 8px;
   width: 100%;
 }
+
+.modal__item--label {
+  width: 36%;
+  color:$gray;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  padding: 0;
+}
+
 .modal__item--average {
   color:white;
   background-color: $orange-button;
@@ -201,7 +201,6 @@ z-index: 1001;
   z-index: 999;
 }
 
-
 .movie-info-content {
   color:$black;
   font-style: normal;
@@ -211,7 +210,6 @@ z-index: 1001;
   padding: 48px 20px 40px;
   width: 320px;
   height: 940px;
-
 
 @media screen and (min-width: $tablet) {
   display: flex;
